src/pascalscript.output
Grammaire

    0 $accept: program $end

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT

    2 program_declaration: T_PROGRAM T_IDENTIFIER T_SEMICOLON

    3 constant_declaration_list: constant_declaration
    4                          | constant_declaration_list constant_declaration

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    6 variable_declaration_list: variable_declaration
    7                          | variable_declaration_list variable_declaration

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON

    9 statement_list: statement
   10               | statement_list statement

   11 statement: T_IDENTIFIER T_ASSIGN expression T_SEMICOLON
   12          | T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

   13 expression: expression T_PLUS term
   14           | expression T_MINUS term
   15           | term

   16 term: term T_STAR factor
   17     | term T_SLASH factor
   18     | term T_DIV factor
   19     | term T_MOD factor
   20     | factor

   21 factor: T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | T_MINUS factor
   23       | scalar

   24 scalar: T_INTEGER_VALUE


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    T_PLUS (258) 13
    T_MINUS (259) 14 22
    T_STAR (260) 16
    T_SLASH (261) 17
    T_DIV (262) 18
    T_MOD (263) 19
    T_ASSIGN (264) 11
    T_LEFT_PARENTHESIS (265) 12 21
    T_RIGHT_PARENTHESIS (266) 12 21
    T_COLON (267) 8
    T_SEMICOLON (268) 2 5 8 11 12
    T_DOT (269) 1
    T_EQUALS (270) 5
    T_PROGRAM (271) 2
    T_CONST (272) 5
    T_VAR (273) 8
    T_BEGIN (274) 1
    T_END (275) 1
    T_WRITELN (276) 12
    T_INTEGER (277) 8
    T_INTEGER_VALUE (278) 5 24
    T_IDENTIFIER (279) 2 5 8 11 12


Non-terminaux, suivis des règles où ils apparaissent

    $accept (25)
        à gauche: 0
    program (26)
        à gauche: 1
        à droite: 0
    program_declaration (27)
        à gauche: 2
        à droite: 1
    constant_declaration_list (28)
        à gauche: 3 4
        à droite: 1 4
    constant_declaration (29)
        à gauche: 5
        à droite: 3 4
    variable_declaration_list (30)
        à gauche: 6 7
        à droite: 1 7
    variable_declaration (31)
        à gauche: 8
        à droite: 6 7
    statement_list (32)
        à gauche: 9 10
        à droite: 1 10
    statement (33)
        à gauche: 11 12
        à droite: 9 10
    expression (34)
        à gauche: 13 14 15
        à droite: 11 13 14 21
    term (35)
        à gauche: 16 17 18 19 20
        à droite: 13 14 15 16 17 18 19
    factor (36)
        à gauche: 21 22 23
        à droite: 16 17 18 19 20 22
    scalar (37)
        à gauche: 24
        à droite: 23


État 0

    0 $accept: • program $end
    1 program: • program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT
    2 program_declaration: • T_PROGRAM T_IDENTIFIER T_SEMICOLON

    T_PROGRAM  décalage et aller à l'état 1

    program              aller à l'état 2
    program_declaration  aller à l'état 3


État 1

    2 program_declaration: T_PROGRAM • T_IDENTIFIER T_SEMICOLON

    T_IDENTIFIER  décalage et aller à l'état 4


État 2

    0 $accept: program • $end

    $end  décalage et aller à l'état 5


État 3

    1 program: program_declaration • constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT
    3 constant_declaration_list: • constant_declaration
    4                          | • constant_declaration_list constant_declaration
    5 constant_declaration: • T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    T_CONST  décalage et aller à l'état 6

    constant_declaration_list  aller à l'état 7
    constant_declaration       aller à l'état 8


État 4

    2 program_declaration: T_PROGRAM T_IDENTIFIER • T_SEMICOLON

    T_SEMICOLON  décalage et aller à l'état 9


État 5

    0 $accept: program $end •

    $défaut  accepter


État 6

    5 constant_declaration: T_CONST • T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    T_IDENTIFIER  décalage et aller à l'état 10


État 7

    1 program: program_declaration constant_declaration_list • variable_declaration_list T_BEGIN statement_list T_END T_DOT
    4 constant_declaration_list: constant_declaration_list • constant_declaration
    5 constant_declaration: • T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON
    6 variable_declaration_list: • variable_declaration
    7                          | • variable_declaration_list variable_declaration
    8 variable_declaration: • T_VAR T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON

    T_CONST  décalage et aller à l'état 6
    T_VAR    décalage et aller à l'état 11

    constant_declaration       aller à l'état 12
    variable_declaration_list  aller à l'état 13
    variable_declaration       aller à l'état 14


État 8

    3 constant_declaration_list: constant_declaration •

    $défaut  réduction par utilisation de la règle 3 (constant_declaration_list)


État 9

    2 program_declaration: T_PROGRAM T_IDENTIFIER T_SEMICOLON •

    $défaut  réduction par utilisation de la règle 2 (program_declaration)


État 10

    5 constant_declaration: T_CONST T_IDENTIFIER • T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    T_EQUALS  décalage et aller à l'état 15


État 11

    8 variable_declaration: T_VAR • T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON

    T_IDENTIFIER  décalage et aller à l'état 16


État 12

    4 constant_declaration_list: constant_declaration_list constant_declaration •

    $défaut  réduction par utilisation de la règle 4 (constant_declaration_list)


État 13

    1 program: program_declaration constant_declaration_list variable_declaration_list • T_BEGIN statement_list T_END T_DOT
    7 variable_declaration_list: variable_declaration_list • variable_declaration
    8 variable_declaration: • T_VAR T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON

    T_VAR    décalage et aller à l'état 11
    T_BEGIN  décalage et aller à l'état 17

    variable_declaration  aller à l'état 18


État 14

    6 variable_declaration_list: variable_declaration •

    $défaut  réduction par utilisation de la règle 6 (variable_declaration_list)


État 15

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS • T_INTEGER_VALUE T_SEMICOLON

    T_INTEGER_VALUE  décalage et aller à l'état 19


État 16

    8 variable_declaration: T_VAR T_IDENTIFIER • T_COLON T_INTEGER T_SEMICOLON

    T_COLON  décalage et aller à l'état 20


État 17

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN • statement_list T_END T_DOT
    9 statement_list: • statement
   10               | • statement_list statement
   11 statement: • T_IDENTIFIER T_ASSIGN expression T_SEMICOLON
   12          | • T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

    T_WRITELN     décalage et aller à l'état 21
    T_IDENTIFIER  décalage et aller à l'état 22

    statement_list  aller à l'état 23
    statement       aller à l'état 24


État 18

    7 variable_declaration_list: variable_declaration_list variable_declaration •

    $défaut  réduction par utilisation de la règle 7 (variable_declaration_list)


État 19

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE • T_SEMICOLON

    T_SEMICOLON  décalage et aller à l'état 25


État 20

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON • T_INTEGER T_SEMICOLON

    T_INTEGER  décalage et aller à l'état 26


État 21

   12 statement: T_WRITELN • T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

    T_LEFT_PARENTHESIS  décalage et aller à l'état 27


État 22

   11 statement: T_IDENTIFIER • T_ASSIGN expression T_SEMICOLON

    T_ASSIGN  décalage et aller à l'état 28


État 23

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list • T_END T_DOT
   10 statement_list: statement_list • statement
   11 statement: • T_IDENTIFIER T_ASSIGN expression T_SEMICOLON
   12          | • T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

    T_END         décalage et aller à l'état 29
    T_WRITELN     décalage et aller à l'état 21
    T_IDENTIFIER  décalage et aller à l'état 22

    statement  aller à l'état 30


État 24

    9 statement_list: statement •

    $défaut  réduction par utilisation de la règle 9 (statement_list)


État 25

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON •

    $défaut  réduction par utilisation de la règle 5 (constant_declaration)


État 26

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON T_INTEGER • T_SEMICOLON

    T_SEMICOLON  décalage et aller à l'état 31


État 27

   12 statement: T_WRITELN T_LEFT_PARENTHESIS • T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

    T_IDENTIFIER  décalage et aller à l'état 32


État 28

   11 statement: T_IDENTIFIER T_ASSIGN • expression T_SEMICOLON
   13 expression: • expression T_PLUS term
   14           | • expression T_MINUS term
   15           | • term
   16 term: • term T_STAR factor
   17     | • term T_SLASH factor
   18     | • term T_DIV factor
   19     | • term T_MOD factor
   20     | • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    expression  aller à l'état 36
    term        aller à l'état 37
    factor      aller à l'état 38
    scalar      aller à l'état 39


État 29

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END • T_DOT

    T_DOT  décalage et aller à l'état 40


État 30

   10 statement_list: statement_list statement •

    $défaut  réduction par utilisation de la règle 10 (statement_list)


État 31

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON •

    $défaut  réduction par utilisation de la règle 8 (variable_declaration)


État 32

   12 statement: T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER • T_RIGHT_PARENTHESIS T_SEMICOLON

    T_RIGHT_PARENTHESIS  décalage et aller à l'état 41


État 33

   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   22       | T_MINUS • factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    factor  aller à l'état 42
    scalar  aller à l'état 39


État 34

   13 expression: • expression T_PLUS term
   14           | • expression T_MINUS term
   15           | • term
   16 term: • term T_STAR factor
   17     | • term T_SLASH factor
   18     | • term T_DIV factor
   19     | • term T_MOD factor
   20     | • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   21       | T_LEFT_PARENTHESIS • expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    expression  aller à l'état 43
    term        aller à l'état 37
    factor      aller à l'état 38
    scalar      aller à l'état 39


État 35

   24 scalar: T_INTEGER_VALUE •

    $défaut  réduction par utilisation de la règle 24 (scalar)


État 36

   11 statement: T_IDENTIFIER T_ASSIGN expression • T_SEMICOLON
   13 expression: expression • T_PLUS term
   14           | expression • T_MINUS term

    T_PLUS       décalage et aller à l'état 44
    T_MINUS      décalage et aller à l'état 45
    T_SEMICOLON  décalage et aller à l'état 46


État 37

   15 expression: term •  [T_PLUS, T_MINUS, T_RIGHT_PARENTHESIS, T_SEMICOLON]
   16 term: term • T_STAR factor
   17     | term • T_SLASH factor
   18     | term • T_DIV factor
   19     | term • T_MOD factor

    T_STAR   décalage et aller à l'état 47
    T_SLASH  décalage et aller à l'état 48
    T_DIV    décalage et aller à l'état 49
    T_MOD    décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 15 (expression)


État 38

   20 term: factor •

    $défaut  réduction par utilisation de la règle 20 (term)


État 39

   23 factor: scalar •

    $défaut  réduction par utilisation de la règle 23 (factor)


État 40

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT •

    $défaut  réduction par utilisation de la règle 1 (program)


État 41

   12 statement: T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS • T_SEMICOLON

    T_SEMICOLON  décalage et aller à l'état 51


État 42

   22 factor: T_MINUS factor •

    $défaut  réduction par utilisation de la règle 22 (factor)


État 43

   13 expression: expression • T_PLUS term
   14           | expression • T_MINUS term
   21 factor: T_LEFT_PARENTHESIS expression • T_RIGHT_PARENTHESIS

    T_PLUS               décalage et aller à l'état 44
    T_MINUS              décalage et aller à l'état 45
    T_RIGHT_PARENTHESIS  décalage et aller à l'état 52


État 44

   13 expression: expression T_PLUS • term
   16 term: • term T_STAR factor
   17     | • term T_SLASH factor
   18     | • term T_DIV factor
   19     | • term T_MOD factor
   20     | • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    term    aller à l'état 53
    factor  aller à l'état 38
    scalar  aller à l'état 39


État 45

   14 expression: expression T_MINUS • term
   16 term: • term T_STAR factor
   17     | • term T_SLASH factor
   18     | • term T_DIV factor
   19     | • term T_MOD factor
   20     | • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    term    aller à l'état 54
    factor  aller à l'état 38
    scalar  aller à l'état 39


État 46

   11 statement: T_IDENTIFIER T_ASSIGN expression T_SEMICOLON •

    $défaut  réduction par utilisation de la règle 11 (statement)


État 47

   16 term: term T_STAR • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    factor  aller à l'état 55
    scalar  aller à l'état 39


État 48

   17 term: term T_SLASH • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    factor  aller à l'état 56
    scalar  aller à l'état 39


État 49

   18 term: term T_DIV • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    factor  aller à l'état 57
    scalar  aller à l'état 39


État 50

   19 term: term T_MOD • factor
   21 factor: • T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | • T_MINUS factor
   23       | • scalar
   24 scalar: • T_INTEGER_VALUE

    T_MINUS             décalage et aller à l'état 33
    T_LEFT_PARENTHESIS  décalage et aller à l'état 34
    T_INTEGER_VALUE     décalage et aller à l'état 35

    factor  aller à l'état 58
    scalar  aller à l'état 39


État 51

   12 statement: T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON •

    $défaut  réduction par utilisation de la règle 12 (statement)


État 52

   21 factor: T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS •

    $défaut  réduction par utilisation de la règle 21 (factor)


État 53

   13 expression: expression T_PLUS term •  [T_PLUS, T_MINUS, T_RIGHT_PARENTHESIS, T_SEMICOLON]
   16 term: term • T_STAR factor
   17     | term • T_SLASH factor
   18     | term • T_DIV factor
   19     | term • T_MOD factor

    T_STAR   décalage et aller à l'état 47
    T_SLASH  décalage et aller à l'état 48
    T_DIV    décalage et aller à l'état 49
    T_MOD    décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 13 (expression)


État 54

   14 expression: expression T_MINUS term •  [T_PLUS, T_MINUS, T_RIGHT_PARENTHESIS, T_SEMICOLON]
   16 term: term • T_STAR factor
   17     | term • T_SLASH factor
   18     | term • T_DIV factor
   19     | term • T_MOD factor

    T_STAR   décalage et aller à l'état 47
    T_SLASH  décalage et aller à l'état 48
    T_DIV    décalage et aller à l'état 49
    T_MOD    décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 14 (expression)


État 55

   16 term: term T_STAR factor •

    $défaut  réduction par utilisation de la règle 16 (term)


État 56

   17 term: term T_SLASH factor •

    $défaut  réduction par utilisation de la règle 17 (term)


État 57

   18 term: term T_DIV factor •

    $défaut  réduction par utilisation de la règle 18 (term)


État 58

   19 term: term T_MOD factor •

    $défaut  réduction par utilisation de la règle 19 (term)
